--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">firebasemusicplayer</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="title_activity_splash_activity">splash_activity</string>
 </resources>
